2008-08-01  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #428384

	* mail-composer.error.xml:
	Improve buttons in the "exit-unsaved" dialog by replacing "Cancel"
	with "Continue Editing" and "Save Message" with "Save Draft".
	Suggested by bytesmythe.

2008-07-20  Bharath Acharya  <abharath@novell.com>

	** Fix for bug #200147

	* evolution-composer.ui: Added a Template placeholder

2008-07-09  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #206592

	* evolution-composer.ui:
	* e-composer-actions.h:
	* e-composer-actions.c: (action_new_message_cb), (entries):
	Action to invoke New Message window from the composer itself.

2008-06-30  Matthew Barnes  <mbarnes@redhat.com>

	* e-composer-post-header.c (composer_post_header_finalize):
	Add a finalize() method to free priv->base_url, which was leaking.

2008-06-21  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #310988

	* e-msg-composer.c:
	Don't even show the "send-options" action unless an Exchange
	or GroupWise account appears in the From combo box.

2008-06-20  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #538908

	* e-composer-actions.h:
	Define E_COMPOSER_ACTION_SEND_OPTIONS.

	* e-msg-composer.c (msg_composer_account_changed_cb):
	Desensitize the "send-options" action unless we've selected an
	Exchange or GroupWise account.  Based on a patch by Paul Bolle.

2008-06-13  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #330597

	* e-msg-composer.c: (add_attachments_handle_mime_part): Add all
	text/* parts which has a filename set and also attach all submessages.

2008-05-08  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #525241 (EPluginUI)

	* e-msg-composer.c (msg_composer_destroy), (msg_composer_init):
	Rip out the EMenu logic.

	* e-msg-composer.c (msg_composer_init):
	Register the GtkUIManager with EPluginUI.

2008-05-06  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #424744

	* e-composer-private.c:
	* e-composer-private.h:
	* e-msg-composer.c: