@@ -1,3 +1,10 @@
+2008-08-18  Baptiste Mille-Mathias  <bmm80@free.fr>
+
+	** Fixes bug #546867
+
+	* e-composer-private.c (e_composer_private_init): Set the 'Send' button
+	as important to have a label. 
+
 2008-08-01  Matthew Barnes  <mbarnes@redhat.com>
 
 	** Fixes bug #428384
